[package]
name = "sdltris"
version = "0.1.0"
authors = ["Warren Hodgkinson <warren.hodgkinson@jet.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.rustris]
git = "https://github.com/warrenhodg/rustris"
tag = "1.0.2"

[dependencies.sdl2]
version = "0.34.0"
default-features = false
features = ["ttf"]
